add partial metrics for seg-aware